[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/PetStats.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tileset.png" type="Texture" id=2]

[node name="PetStats" type="Node2D"]

script/script = ExtResource( 1 )

[node name="HungerIcon" type="Sprite" parent="."]

transform/pos = Vector2( 8, 8 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 80, 144, 16, 16 )

[node name="HungerBar" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 4.0
margin/right = 60.0
margin/bottom = 12.0
color = Color( 0.505882, 0.384314, 0.443137, 1 )

[node name="Level" type="ColorFrame" parent="HungerBar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 8.0
color = Color( 0.12549, 0.223529, 0.309804, 1 )

[node name="HygieneIcon" type="Sprite" parent="."]

transform/pos = Vector2( 88, 8 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 80, 160, 16, 16 )

[node name="HygieneBar" type="ColorFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 4.0
margin/right = 140.0
margin/bottom = 12.0
color = Color( 0.505882, 0.384314, 0.443137, 1 )

[node name="Level" type="ColorFrame" parent="HygieneBar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 8.0
color = Color( 0.12549, 0.223529, 0.309804, 1 )

[node name="HappinessIcon" type="Sprite" parent="."]

transform/pos = Vector2( 168, 8 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 80, 176, 16, 16 )

[node name="HappinessBar" type="ColorFrame" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 4.0
margin/right = 220.0
margin/bottom = 12.0
color = Color( 0.505882, 0.384314, 0.443137, 1 )

[node name="Level" type="ColorFrame" parent="HappinessBar"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 8.0
color = Color( 0.12549, 0.223529, 0.309804, 1 )


